k8s/gitops/observability/kube-prometheus-stack/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - grafana.roura.xyz
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
